--- a/components/Filter/Filter.module.scss
+++ b/components/Filter/Filter.module.scss
@@ -1,5 +1,83 @@
 .input {
     padding: 20px;
     background-color: rgb(216, 210, 210);
+    background-color: inherit;
     border: none;
+    font-size: 10px;
+    margin-bottom: 20px;
+    transition: 1s;
+    box-shadow: 5px 10px 15px -4px #515151;
+
+    &:focus {
+        box-shadow: 5px 10px 15px -4px rgb(149, 176, 216);
+    }
+}
+
+.title {
+    margin-bottom: 20px;
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.buttonClear {
+    border: none;
+    outline: none;
+    background-color: inherit;
+}
+
+.slidecontainer {
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.slider {
+    -webkit-appearance: none; 
+    appearance: none;
+    width: 100%;
+    height: 12px; 
+    background: rgb(228, 225, 225);
+    border: 1px solid #b6b3b3;
+    border-radius: 4px;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+
+    &:hover {
+        opacity: 1;
+    }
+
+    &::-webkit-slider-thumb {
+        -webkit-appearance: none; 
+        appearance: none;
+        width: 25px;
+        height: 25px;
+        background: white;
+        border: 1px solid #515151;
+        box-shadow: 5px 10px 15px -4px #515151;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    &::-moz-range-thumb {
+        width: 25px;
+        height: 25px;
+        background: white;
+        border: 1px solid #515151;
+        border-radius: 4px;
+        cursor: pointer;
+    }
 }
