--- a/components/Filter/Filter.module.scss
+++ b/components/Filter/Filter.module.scss
@@ -21,7 +21,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .wrapper {
