--- a/components/SearchInputDate/SearchInputDate.module.scss
+++ b/components/SearchInputDate/SearchInputDate.module.scss
@@ -1,6 +1,6 @@
 .dateContainer {
   padding: 6px 12px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   width: 130px;
   height: 48px;
   border: .0625rem solid #b2b2bf;
