data fetching server side

--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -5,4 +5,6 @@
   --primary-button-color: rgb(var( --primary-button-color-code));
   --text-color-code: 255, 255, 255;
   --text-color: rgb(var(--text-color-code));
+  --highlited-color-code: 211, 47, 47;
+  --highlited-color: rgb(var(--highlited-color-code));
 }
