--- a/components/AccomodationsList/AccomadationItem/AccomodationItem.module.scss
+++ b/components/AccomodationsList/AccomadationItem/AccomodationItem.module.scss
@@ -9,6 +9,12 @@
 
 .title {
   margin-bottom: 10px;
+  transition: 0.3s;
+
+  &:hover {
+    opacity: 0.8;
+    cursor: pointer;
+  }
 }
 
 .address {
