--- a/pages/search/searchPage.module.scss
+++ b/pages/search/searchPage.module.scss
@@ -41,6 +41,15 @@
   background-color: var(--primary-button-color);
   color: var(--text-color);
   text-transform: uppercase;
+  transition: 0.3s;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 1;
+  }
 }
 
 .dateContainer {
