reviews and map addded

--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -20,6 +20,24 @@
   font-weight: normal;
 }
 
+.fs-18-italic {
+  font-size: 18px;
+  font-weight: lighter;
+  font-style: italic;
+}
+
+.fs-18-italic-bold {
+  font-size: 18px;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.fs-20-bold {
+  font-size: 20px;
+  font-weight: normal;
+  font-weight: bold;
+}
+
 .fs-30-bold {
   font-size: 30px;
   font-weight: normal;
