--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -7,4 +7,6 @@
   --text-color: rgb(var(--text-color-code));
   --highlited-color-code: 211, 47, 47;
   --highlited-color: rgb(var(--highlited-color-code));
+  --border-color-code: 204, 204, 204;
+  --border-color: rgb(var(--border-color-code));
 }
