--- a/components/HotelWithDetails/PhotosCarousel/PhotosCarousel.module.scss
+++ b/components/HotelWithDetails/PhotosCarousel/PhotosCarousel.module.scss
@@ -5,11 +5,11 @@
 }
 
 .mainContainer {
-  width: 55%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 0 10px;
 }
 
 .mainImageWrapper {
@@ -31,6 +31,7 @@
 
   & > img {
     width: 160px;
+    height: 90px;
   }
   &:hover {
     cursor: pointer;
