--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -9,4 +9,8 @@
   --highlited-color: rgb(var(--highlited-color-code));
   --border-color-code: 204, 204, 204;
   --border-color: rgb(var(--border-color-code));
+  --light-border-color-code: 178, 178, 191;
+  --light-border-color: rgb(var(--light-border-color-code));
+  --box-shadow-color-code: 0, 0, 0;
+  --box-shadow-color: rgb(var(--box-shadow-color-code));
 }
