--- a/pages/accomodations/accomodationsPage.module.scss
+++ b/pages/accomodations/accomodationsPage.module.scss
@@ -1,23 +1,7 @@
 .container {
-  height: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  background: url('./back.jpg') no-repeat;
+  background-size: cover;
 }
 
-.loadButton {
-  margin: 30px 0 60px;
-  padding: 15px 24px;
-  background-color: var(--primary-button-color);
-  color: var(--text-color);
-  text-transform: uppercase;
-  transition: 0.3s;
-
-  &:hover {
-    opacity: 0.8;
-  }
-
-  &:active {
-    opacity: 1;
-  }
-}
