--- a/pages/search/searchPage.module.scss
+++ b/pages/search/searchPage.module.scss
@@ -1,60 +1,9 @@
-.container {
-  padding: 24px;
-  background-color: var(--main-bg);
-  width: fit-content;
-  border-radius: .25rem;
-}
-
-.input {
-  padding: 6px 12px;
-  background-color: var(--text-color);
-  width: 340px;
-  height: 48px;
-  text-transform: none;
-  color:  var(--main-bg);
-  margin-bottom: 20px;
-}
-
-.inputWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: .25rem;
-  position: relative;
-}
-
 .page {
+  height: 100vh;
+  padding: 50px 30px;
   display: flex;
-  padding: 30px;
-}
-
-.item {
-  text-transform: none;
-
-  & > span {
-    text-transform: uppercase;
-  }
-}
-
-.button {
-  padding: 15px 24px;
-  background-color: var(--primary-button-color);
-  color: var(--text-color);
-  text-transform: uppercase;
-  transition: 0.3s;
-
-  &:hover {
-    opacity: 0.8;
-  }
-
-  &:active {
-    opacity: 1;
-  }
-}
-
-.dateContainer {
-  width: 100%;
-  display: flex;
-  margin-bottom: 20px;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: flex-start;
+  background: url('./back.jpg') no-repeat;
+  background-size: cover;
 }
