--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,3 +1,15 @@
+.fs-10 {
+  font-size: 10px;
+  color: var( --main-bg-code);
+  font-weight: light;
+}
+
+.fs-12 {
+  font-size: 12px;
+  color: var(--main-bg-code);
+  font-weight: light;
+}
+
 .fs-12-italic  {
   font-size: 12px;
   font-weight: normal;
