--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -10,6 +10,12 @@
   font-weight: light;
 }
 
+.fs-12-italic-bold {
+  font-size: 12px;
+  font-weight: bold;
+  font-style: italic;
+}
+
 .fs-12-italic  {
   font-size: 12px;
   font-weight: normal;
