--- a/components/AccomodationsList/AccomodationList.module.scss
+++ b/components/AccomodationsList/AccomodationList.module.scss
@@ -30,7 +30,7 @@
   width: 80%;
   max-width: 1000px;
   min-width: 300px;
-  padding: 0 0 40px;
+  padding: 30px 0 10px 0;
 
   border: 1px solid rgba(var(--main-bg-code), 0.3);
   background-color: rgba(var(--text-color-code), 0.8);
@@ -38,35 +38,9 @@
   box-shadow: 1px 1px 15px -1px var(--box-shadow-color);
 }
 
-.loadButton {
-  position: relative;
-  width: 155px;
-  height: 45px;
-  margin-top: 20px;
-  padding: 15px 24px;
-
-  background-color: var(--primary-button-color);
-  color: var(--text-color);
-  text-transform: uppercase;
-  transition: 0.3s;
-
-  &:hover {
-    opacity: 0.8;
-  }
-
-  &:active {
-    opacity: 1;
-  }
-}
-
 .spinner {
   position: absolute;
-  left: calc(50% - 75px);
-  top: calc(50% - 75px);
-}
-
-.buttonSpinner {
-  position: absolute;
-  left: calc(50% - 10px);
-  top: calc(50% - 10px);
+  left: calc(50% - 70px);
+  top: calc(50vh - 70px);
+  z-index: 3;
 }
