--- a/pages/accomodations/[id]/AccomodationPage.module.scss
+++ b/pages/accomodations/[id]/AccomodationPage.module.scss
@@ -1,4 +1,6 @@
-.accomodationPageContainer {
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
   padding: 30px;
-  height: 100%;
 }
