--- a/components/HotelWithDetails/HotelWithDetails.module.scss
+++ b/components/HotelWithDetails/HotelWithDetails.module.scss
@@ -1,5 +1,5 @@
 .reviewsAndMap {
-  width: 40%;
+  width: 35%;
 }
 
 .container {
@@ -22,8 +22,7 @@
 }
 
 .map {
-  width: 300px;
-  height: 150px;
+  width: 100%;
   margin-bottom: 20px;
   overflow: hidden;
   border: 2px solid var(--border-color);
@@ -51,4 +50,25 @@
   &:active {
     opacity: 1;
   }
+}
+
+@media screen and (max-width: 1200px) {
+  .reviewsAndMap {
+    width: 40%;
+  }
+
+  .imagesWrapper {
+    width: 50%;
+  }
+  // .topRow {
+  //   flex-direction: column;
+  //   align-items: center;
+  // }
+
+  // .reviewsAndMap {
+  //   width: 100%;
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  // }
 }
