--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,10 @@
 @import './vars.scss';
 @import './fonts.scss';
 
+* {
+  box-sizing: border-box;
+}
+
 html,
 body,
 a, 
@@ -10,16 +14,11 @@ input {
   padding: 0;
   margin: 0;
   font-family: 'Quicksand', sans-serif;
-  color: #111236;
+  color: var(--main-bg);
 }
 
 input::placeholder {
   opacity: 0.6;
-}
-
-
-* {
-  box-sizing: border-box;
 }
 
 ul {
