--- a/components/HotelWithDetails/BookList/BookList.module.scss
+++ b/components/HotelWithDetails/BookList/BookList.module.scss
@@ -1,15 +1,27 @@
 .headersList {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr 0.6fr;
+  grid-template-columns: 1fr 1.7fr 1.5fr 1fr;
   font-style: italic;
   align-items: center;
-  background-color: rgba(var(--main-bg-code), 0.9);
   color: var(--text-color);
 
   & > li {
     border: 1px solid rgba(var(--border-color-code), 0.4);
     height: 100%;
     padding: 10px;
+    background-color: rgba(var(--main-bg-code), 0.9);
+  }
+}
+
+
+@media screen and (max-width: 700px) {
+  .headersList {
+    grid-template-columns: 100px 200px 150px 150px;
+  }
+
+  .container {
+    width: 100%;
+    overflow-x: scroll;
   }
 }
