--- a/components/AccomodationsList/AccomadationItem/AccomodationItem.module.scss
+++ b/components/AccomodationsList/AccomadationItem/AccomodationItem.module.scss
@@ -49,3 +49,11 @@
   margin-right: 15px;
 }
 
+@media screen and (max-width: 700px) {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
