--- a/components/HotelWithDetails/PhotosCarousel/PhotosCarousel.module.scss
+++ b/components/HotelWithDetails/PhotosCarousel/PhotosCarousel.module.scss
@@ -68,11 +68,57 @@
   .mainImageWrapper {
     max-height: 320px;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
   
     & > img {
      height: 250px;
     }
+  }
+}
+
+@media screen and (max-width: 600px) { 
+  .mainImageWrapper {
+    max-height: 320px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+  
+    & > img {
+     width: 100%;
+     height: auto;
+    }
+  }
+
+  .moveButton {
+    box-sizing: border-box;
+    background-color: rgba(var(--primary-button-color-code), 0.8);
+    width: 25px;
+    height: 25px;
+    padding: 5px;
+    z-index: 5;
+    position: absolute;
+
+    &:nth-child(1){
+      top: calc(50% - 12px);
+      left: 3px;
+    }
+
+    &:nth-child(3) {
+      top: calc(50% - 12px);
+      right: 3px;
+    }
+
+    & > img {
+      width: 100%;
+      height: 100%;
+    }
+  
+    &:active {
+      background-color: rgba(94, 102, 102, 0.2);
+    }
+  }
+  
+  .previousButton {
+    transform: rotate(-180deg);
   }
 }
