--- a/pages/accomodations/accomodationsPage.module.scss
+++ b/pages/accomodations/accomodationsPage.module.scss
@@ -5,3 +5,10 @@
   background-size: cover;
 }
 
+@media screen and (max-width: 900px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
