--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -57,12 +57,16 @@
   font-style: italic;
 }
 
+.fs-16-italic {
+  font-size: 16px;
+  font-weight: normal;
+  font-style: italic;
+}
+
 .fs-18 {
   font-size: 18px;
   font-weight: normal;
 }
-
-
 
 .fs-18-italic {
   font-size: 18px;
