--- a/components/SearchButton/SearchButton.module.scss
+++ b/components/SearchButton/SearchButton.module.scss
@@ -1,8 +1,7 @@
 
 .button {
-  width: 50%;
   height: 48px;
-  max-width: 171px;
+  width: 171px;
   padding: 15px 24px;
   background-color: var(--primary-button-color);
   color: var(--text-color);
