--- a/pages/accomodations/[id]/AccomodationPage.module.scss
+++ b/pages/accomodations/[id]/AccomodationPage.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 0 30px;
   background: url('./bc.jpg') no-repeat;
   background-size: cover;
