unused reviews deleted

--- a/components/HotelWithDetails/BookList/BookItem/BookitemDetails/BookitemDetails.module.scss
+++ b/components/HotelWithDetails/BookList/BookItem/BookitemDetails/BookitemDetails.module.scss
@@ -67,6 +67,9 @@
   overflow-x: scroll;
   width: 400px;
   transition: 0.5s;
+    display: flex;
+    justify-content: center;
+  
 }
 
 .photosItem {
@@ -163,9 +166,7 @@
     width: 250px;
   }
   
-.photosListWrapper {
 
-}
 
   .previousButton {
     left: 0;
