--- a/components/HotelWithDetails/Reviews/Reviews.module.scss
+++ b/components/HotelWithDetails/Reviews/Reviews.module.scss
@@ -33,3 +33,11 @@
   border-radius: 4px;
   padding: 10px;
 }
+
+.link {
+  transition: 0.3s;
+  &:hover {
+    cursor: pointer;
+    opacity: 0.7;
+  }
+}
