--- a/components/HotelWithDetails/BookList/BookItem/BookitemDetails/BookitemDetails.module.scss
+++ b/components/HotelWithDetails/BookList/BookItem/BookitemDetails/BookitemDetails.module.scss
@@ -9,8 +9,8 @@
   width: 850px;
   height: 80vh!important;
   overflow: scroll;
-  -webkit-box-shadow: 4px 0px 7px 5px rgba(0,0,0,0.57); 
-  box-shadow: 4px 0px 7px 5px rgba(0,0,0,0.57);
+  -webkit-box-shadow: 4px 0px 7px 5px rgba(var(--box-shadow-color-code), 0.57); 
+  box-shadow: 4px 0px 7px 5px rgba(var(--box-shadow-color-code), 0.57);
   border-radius: 10px 0;
 }
 
@@ -67,8 +67,8 @@
   overflow-x: scroll;
   width: 400px;
   transition: 0.5s;
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
   
 }
 
@@ -137,7 +137,6 @@
   border-bottom: 1px solid rgba(var(--border-color-code), 0.8);
 }
 
-
 @media screen and (max-width: 950px) {
   .container {
     width: 90%;
@@ -166,8 +165,6 @@
     width: 250px;
   }
   
-
-
   .previousButton {
     left: 0;
   }
