--- a/components/SearchComponents/Counter/Counter.module.scss
+++ b/components/SearchComponents/Counter/Counter.module.scss
@@ -9,7 +9,7 @@
   width: 100%;
   height: 48px;
   background-color: var(--text-color);
-  border: 0.0625rem solid #b2b2bf;
+  border: 0.0625rem solid var(--border-color);
   border-radius: 0.25rem;
 }
 
