added home button

--- a/components/MainLayout/MainLayout.module.scss
+++ b/components/MainLayout/MainLayout.module.scss
@@ -1,4 +1,22 @@
 .layout {
   width: 100%;
   height: 100%;
+  position: relative;
+}
+
+.button {
+  width: 100%;
+  border: none;
+  border-radius: 0%;
+  padding: 8px 24px;
+  text-align: left;
+  color: var(--text-color);
+  background-color: var(--main-bg);
+}
+
+.content {
+  position: absolute;
+  top: 40px;
+  width: 100%;
+  height: 100%;
 }
