added hode search mobile button

--- a/pages/accomodations/accomodationsPage.module.scss
+++ b/pages/accomodations/accomodationsPage.module.scss
@@ -8,6 +8,7 @@
 .button {
   border-radius: 4px;
   padding: 5px 15px;
+  margin: 5px 0;
   background-color: var(--main-bg);
   color: var(--text-color);
   font-weight: bold;
