--- a/pages/accomodations/[id]/AccomodationPage.module.scss
+++ b/pages/accomodations/[id]/AccomodationPage.module.scss
@@ -11,6 +11,7 @@
 
 .wrapper {
   max-width: 1200px;
+  width: 100%;
   padding: 24px;
   background-color: rgba(var(--text-color-code), 0.9);
   -webkit-box-shadow: 1px 1px 15px -1px var(--box-shadow-color); 
