--- a/components/HotelWithDetails/BookList/BookItem/BookitemDetails/BookitemDetails.module.scss
+++ b/components/HotelWithDetails/BookList/BookItem/BookitemDetails/BookitemDetails.module.scss
@@ -42,6 +42,16 @@
   width: 50%;
 }
 
+.noPhoto {
+  text-align: center;
+  transition: 0.3s;
+
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.03);
+  }
+}
+
 .photosTitle {
   position: absolute;
   top: 5px;
